--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </svg> IDIOMA</a>
 
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="index.html"><span class="item-text">SPANISH</span></a>
+<a class="dropdown-item" href="index.html"><span class="item-text">ESPAÑOL</span></a>
 
 <div class="dropdown-items-divide-hr"></div>
 <a class="dropdown-item" href="en/index.html"><span class="item-text">ENGLISH</span></a>
