--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
     
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-<a class="navbar-brand logo-image" href="index.html"><img src="static/images/logo.png" alt="The database is offline or a loading error has occurred"></a> 
+<a class="navbar-brand logo-image" href="NayutaWeb/index.html"><img src="static/images/logo.png" alt="The database is offline or a loading error has occurred"></a> 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-awesome fas fa-bars"></span>
 <span class="navbar-toggler-awesome fas fa-times"></span>
