--- a/en/team/index.html
+++ b/en/team/index.html
@@ -137,7 +137,7 @@
         </div>
 	  
 	 <div class="badge">
-          <img src="https://i.imgur.com/JV7cz6H.png"></img>
+          <img src="https://i.imgur.com/QlQpw5V.png"></img>
         </div>
 	  
 	  
