--- a/equipo/index.html
+++ b/equipo/index.html
@@ -137,7 +137,7 @@
         </div>
 	  
         <div class="badge">
-          <img src="https://i.imgur.com/oeFxSlo.png"></img>
+          <img src="https://cdn.discordapp.com/attachments/618943582694539276/1069062987345830060/JV7cz6H_1_1.png"></img>
         </div>
 	
         <div class="badge">
