--- a/equipo/index.html
+++ b/equipo/index.html
@@ -200,7 +200,7 @@
         </div>
 	    
         <div class="badge">
-          <img src="https://i.imgur.com/oeFxSlo.png"></img>
+          <img src="https://cdn.discordapp.com/attachments/709480386387771535/1069071554111086602/dev345345.png"></img>
         </div>
 	    
         <div class="badge">
