--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="equipo/index.html">EQUIPO</a>
+<a class="nav-link page-scroll" href="equipo/">EQUIPO</a>
 </li>
 
 <li class="nav-item">
-    <a class="nav-link page-scroll" href="estado/index.html">ESTADO</a>
+    <a class="nav-link page-scroll" href="estado/">ESTADO</a>
     </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="votar/index.html">VOTAR</a>
+<a class="nav-link page-scroll" href="votar/">VOTAR</a>
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="invitar/index.html">INVITAR</a>
+<a class="nav-link page-scroll" href="invitar/">INVITAR</a>
 </li>
 
 <li class="nav-item">
-    <a class="nav-link page-scroll" href="soporte/index.html">SOPORTE</a>
+    <a class="nav-link page-scroll" href="soporte/">SOPORTE</a>
     </li>
 				
 <li class="nav-item dropdown">
