--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <a class="dropdown-item" href="index.html"><span class="item-text">ESPAÑOL</span></a>
 
 <div class="dropdown-items-divide-hr"></div>
-<a class="dropdown-item" href="en/index.html"><span class="item-text">ENGLISH</span></a>
+<a class="dropdown-item" href="en/"><span class="item-text">ENGLISH</span></a>
 
 </div>
 </li>				
@@ -100,8 +100,8 @@
 
 <h1>NAYUTA</span></h1>
 <p class="p-large">Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más</p>
-<a class="btn-solid-lg page-scroll" href="invitar/index.html"><i class=""></i>INVITAME AHORA</a>
-<a class="btn-solid-lg page-scroll" href="soporte/index.html"><i class="fab fa-discord"></i>SOPORTE</a>
+<a class="btn-solid-lg page-scroll" href="invitar/"><i class=""></i>INVITAME AHORA</a>
+<a class="btn-solid-lg page-scroll" href="soporte/"><i class="fab fa-discord"></i>SOPORTE</a>
 </div>
 </div>
 
