--- a/equipo/index.html
+++ b/equipo/index.html
@@ -42,7 +42,7 @@
 </div>
     
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-<a class="navbar-brand logo-image" href="../index.html"><img src="../static/images/logo.png" alt="La base de datos está fuera de línea o se ha producido un error de carga."></a> 
+<a class="navbar-brand logo-image" href="../"><img src="../static/images/logo.png" alt="La base de datos está fuera de línea o se ha producido un error de carga."></a> 
 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-awesome fas fa-bars"></span>
@@ -54,27 +54,27 @@
 <ul class="navbar-nav ml-auto">
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../index.html">INICIO</a>
+<a class="nav-link page-scroll" href="../">INICIO</a>
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="index.html">EQUIPO</a>
+<a class="nav-link page-scroll" href=" ">EQUIPO</a>
 </li>
 
 <li class="nav-item">
-  <a class="nav-link page-scroll" href="../estado/index.html">ESTADO</a>
+  <a class="nav-link page-scroll" href="../estado/">ESTADO</a>
   </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../votar/index.html">VOTAR</a>
+<a class="nav-link page-scroll" href="../votar/">VOTAR</a>
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../invitar/index.html">INVITAR</a>
+<a class="nav-link page-scroll" href="../invitar/">INVITAR</a>
 </li>
 
 <li class="nav-item">
-  <a class="nav-link page-scroll" href="../soporte/index.html">SOPORTE</a>
+  <a class="nav-link page-scroll" href="../soporte/">SOPORTE</a>
   </li>
 
 				
@@ -85,10 +85,10 @@
 </svg> IDIOMA</a>
 
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="../index.html"><span class="item-text">ESPAÑOL</span></a>
+<a class="dropdown-item" href="../"><span class="item-text">ESPAÑOL</span></a>
 
 <div class="dropdown-items-divide-hr"></div>
-<a class="dropdown-item" href="../en/index.html"><span class="item-text">ENGLISH</span></a>
+<a class="dropdown-item" href="../en/"><span class="item-text">ENGLISH</span></a>
 
 
 </div>
