--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <ul class="navbar-nav ml-auto">
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="index.html">INICIO</a>
+<a class="nav-link page-scroll" href=" ">INICIO</a>
 </li>
 
 <li class="nav-item">
@@ -81,7 +81,7 @@
   </svg> IDIOMA</a>
 
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="index.html"><span class="item-text">ESPAÑOL</span></a>
+<a class="dropdown-item" href=""><span class="item-text">ESPAÑOL</span></a>
 
 <div class="dropdown-items-divide-hr"></div>
 <a class="dropdown-item" href="en/"><span class="item-text">ENGLISH</span></a>
