--- a/en/index.html
+++ b/en/index.html
@@ -51,27 +51,27 @@
 <ul class="navbar-nav ml-auto">
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../en/index.html">HOME</a>
+<a class="nav-link page-scroll" href="../en/">HOME</a>
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../en/team/index.html">TEAM</a>
+<a class="nav-link page-scroll" href="../en/team/">TEAM</a>
 </li>
 
 <li class="nav-item">
-    <a class="nav-link page-scroll" href="../estado/index.html">STATUS</a>
+    <a class="nav-link page-scroll" href="../estado/">STATUS</a>
     </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../votar/index.html">VOTE</a>
+<a class="nav-link page-scroll" href="../votar/">VOTE</a>
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../invitar/index.html">INVITE</a>
+<a class="nav-link page-scroll" href="../invitar/">INVITE</a>
 </li>
 
 <li class="nav-item">
-    <a class="nav-link page-scroll" href="../soporte/index.html">SUPPORT</a>
+    <a class="nav-link page-scroll" href="../soporte/">SUPPORT</a>
     </li>
 				
 <li class="nav-item dropdown">
@@ -81,10 +81,10 @@
   </svg> LANGUAGE</a>
 
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="../index.html"><span class="item-text">SPANISH</span></a>
+<a class="dropdown-item" href="../"><span class="item-text">SPANISH</span></a>
 
 <div class="dropdown-items-divide-hr"></div>
-<a class="dropdown-item" href="../en/index.html"><span class="item-text">ENGLISH</span></a>
+<a class="dropdown-item" href="../en/"><span class="item-text">ENGLISH</span></a>
 
 </div>
 </li>				
@@ -100,8 +100,8 @@
 
 <h1>NAYUTA</span></h1>
 <p class="p-large">Nayuta is a bot dedicated to anime content in general, fun, moderation, memes and much more</p>
-<a class="btn-solid-lg page-scroll" href="../invitar/index.html"><i class=""></i>INVITE ME NOW</a>
-<a class="btn-solid-lg page-scroll" href="../soporte/index.html"><i class="fab fa-discord"></i>SUPPORT</a>
+<a class="btn-solid-lg page-scroll" href="../invitar/"><i class=""></i>INVITE ME NOW</a>
+<a class="btn-solid-lg page-scroll" href="../soporte/"><i class="fab fa-discord"></i>SUPPORT</a>
 </div>
 </div>
 
