--- a/en/team/index.html
+++ b/en/team/index.html
@@ -54,27 +54,27 @@
 <ul class="navbar-nav ml-auto">
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../../en/index.html">HOME</a>
+<a class="nav-link page-scroll" href="../../en/">HOME</a>
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="index.html">TEAM</a>
+<a class="nav-link page-scroll" href=" ">TEAM</a>
 </li>
 
 <li class="nav-item">
-  <a class="nav-link page-scroll" href="../../estado/index.html">STATUS</a>
+  <a class="nav-link page-scroll" href="../../estado/">STATUS</a>
   </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../../votar/index.html">VOTE</a>
+<a class="nav-link page-scroll" href="../../votar/">VOTE</a>
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href="../../invitar/index.html">INVITE</a>
+<a class="nav-link page-scroll" href="../../invitar/">INVITE</a>
 </li>
 
 <li class="nav-item">
-  <a class="nav-link page-scroll" href="../../soporte/index.html">SUPPORT</a>
+  <a class="nav-link page-scroll" href="../../soporte/">SUPPORT</a>
   </li>
 
 				
@@ -85,10 +85,10 @@
 </svg> LANGUAGE</a>
 
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-<a class="dropdown-item" href="../index.html"><span class="item-text">SPANISH</span></a>
+<a class="dropdown-item" href="../"><span class="item-text">SPANISH</span></a>
 
 <div class="dropdown-items-divide-hr"></div>
-<a class="dropdown-item" href="../../en/index.html"><span class="item-text">ENGLISH</span></a>
+<a class="dropdown-item" href="../../en/"><span class="item-text">ENGLISH</span></a>
 
 
 </div>
