--- a/en/index.html
+++ b/en/index.html
@@ -13,7 +13,7 @@
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más." />
-<meta property="og:image" content="static/images/nayuta.png" />
+<meta property="og:image" content="static/images/nayutalogosite.png" />
 <meta property="og:url" content="" />	
 <meta property="og:type" content="article" />
 
