--- a/privacidad/index.html
+++ b/privacidad/index.html
@@ -58,7 +58,7 @@
 </li>
 
 <li class="nav-item">
-<a class="nav-link page-scroll" href=" ">EQUIPO</a>
+<a class="nav-link page-scroll" href="../equipo/">EQUIPO</a>
 </li>
 
 <li class="nav-item">
