--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 <div class="footer-col">
 <h4><img src="static/images/footerimage.png" width="150" height="50" align="left"><br></h4>
 <p><br>Nayuta es un bot de entretenimiento diseñado para cuidar de ti y de tu servidor, con el objetivo de llevar la atmósfera cómoda y saludable directamente a tu chat.</p>
+<div class=""><a class="turquoise" href="privacidad/">Política de privacidad</a></div>
 </div>
 </div>
 
