--- a/equipo/index.html
+++ b/equipo/index.html
@@ -375,7 +375,7 @@
 <div class="footer-col">
 <h4>Nayutabot</h4>
 <p>Nayuta es un bot de entretenimiento diseñado para cuidar de ti y de tu servidor, con el objetivo de llevar la atmósfera cómoda y saludable directamente a tu chat.</p>
-<div class=""><a class="turquoise" href="../privacidad">Política de privacidad</a></div>
+<div class=""><a class="turquoise" href="../privacidad/">Política de privacidad</a></div>
 </div>
 </div>
 
