--- a/en/team/index.html
+++ b/en/team/index.html
@@ -376,7 +376,7 @@
 <div class="footer-col">
 <h4>Nayutabot</h4>
 <p>Nayuta is an entertainment bot designed to take care of you and your server, with the aim of bringing the comfortable and healthy atmosphere directly to your chat</p>
-<div class=""><a class="turquoise" href="../../en/privacity/">Política de privacidad</a></div>
+<div class=""><a class="turquoise" href="../../en/privacity/">Privacy Policy</a></div>
 </div>
 </div>
 
