--- a/en/privacity/index.html
+++ b/en/privacity/index.html
@@ -162,7 +162,7 @@
 <h4>Nayutabot</h4>
 <p>Nayuta is an entertainment bot designed to take care of you and your server, aiming to bring the comfortable and healthy atmosphere directly to your chat.
 </p>
-<div class=""><a class="turquoise" href=" ">Política de privacidad</a></div>
+<div class=""><a class="turquoise" href=" ">Privacy Policy</a></div>
 </div>
 </div>
 
