--- a/privacidad/index.html
+++ b/privacidad/index.html
@@ -113,7 +113,7 @@
     <div class="col-lg-10 offset-lg-1">
     <div class="text-container">
     
-        <p>En Nayuta, nos tomamos muy en serio la privacidad y seguridad de nuestros usuarios para mantener la confianza y el prestigio que lo han caracterizado desde que inicio sus operaciones. Esta Política de privacidad describe cómo recopilamos, utilizamos y protegemos la información personal de nuestros usuarios.</p>
+        <p>En Nayuta, nos tomamos muy en serio la privacidad y seguridad de nuestros usuarios para mantener la confianza y el prestigio que lo han caracterizado desde que inició sus operaciones. Esta Política de privacidad describe cómo recopilamos, utilizamos y protegemos la información personal de nuestros usuarios.</p>
 
     <h3>1. Recopilación de información</h3>
     <p>1.1 Información que proporcionas voluntariamente: Recopilamos información que nos proporcionas voluntariamente al utilizar nuestro bot, como tu ID de usuario en Discord, tu nombre de usuario y avatar, y cualquier información relacionada con los mensajes que envías o recibes en los servidores de Discord.
