--- a/equipo/index.html
+++ b/equipo/index.html
@@ -141,7 +141,7 @@
         </div>
 	
         <div class="badge">
-          <img src="https://i.imgur.com/SQnp9u8.gif"></img>
+          <img src="https://i.imgur.com/1sFjsm9.gif"></img>
         </div>
 	
         <div class="badge">
