--- a/en/index.html
+++ b/en/index.html
@@ -84,7 +84,7 @@
   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
     <a class="dropdown-item" href="">
       <img src="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f1ea-1f1f8.svg" alt="Español" width="16" height="12">
-      <span class="item-text">ESPAÑOL</span>
+      <span class="item-text">SPANISH</span>
     </a>
     <div class="dropdown-items-divide-hr"></div>
     <a class="dropdown-item" href="en/">
