--- a/privacidad/index.html
+++ b/privacidad/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más.">    
 <meta name="author" content="Inovatik">
 
-<meta property="og:site_name" content="nayutabot.us" />
+<meta property="og:site_name" content="nayutabot.com" />
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayutabot"/>	
 <meta property="og:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más." />
