--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más.">    
 <meta name="author" content="Inovatik">
 
-<meta property="og:site_name" content="Nayutabot.com" />
+<meta property="og:site_name" content="nayutabot.com" />
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más." />
