--- a/en/team/index.html
+++ b/en/team/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes, and much more.">    
 <meta name="author" content="Inovatik">
 
-<meta property="og:site_name" content="nayutabot.us" />
+<meta property="og:site_name" content="nayutabot.com" />
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayutabot"/>	
 <meta property="og:description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes, and much more." />
