--- a/en/privacity/index.html
+++ b/en/privacity/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes and much more.">    
 <meta name="author" content="Inovatik">
 
-<meta property="og:site_name" content="nayutabot.us" />
+<meta property="og:site_name" content="nayutabot.com" />
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes and much more." />
