--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 <div class="col-lg-6">
 <div class="text-container">
 
-<h3>SEGUIMIENTO DE TUS ANIMES</h3>
-<p>Añade a tu lista los animes que te gustan y podras ser notificado cuando se estrenará el próximo cápitulo.</p>
+<h3>MENSAJES PERSONALIZADOS</h3>
+<p>Nayuta tiene la capacidad de adaptar mensajes en formato embed.<br><br>Los mensajes pueden ser completamente personalizados, incorporando diversas variables para crear saludos y agradecimientos únicos y atractivos.<br><br>Con Nayuta presente en tu servidor podrás tener todo esto con un simple comando.</p>
 
 </div>
 </div>
