--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <div class="text-container">
 
 <h3>GIFS Y ACCIONES</h3>
-<p>Nayuta tiene más de +500 gifs disponibles y tambien trae comandos para interactuar con tus amigos en tu servidor.<br><br>¡Convertirte en una persona muy encantadora!</p>
+<p>Nayuta tiene más de +500 gifs disponibles y tambien trae comandos para interactuar con tus amigos en tu servidor.<br><br>¡Conviertete en una persona muy encantadora!</p>
 
 </div>
 </div>
@@ -200,7 +200,7 @@
 <div class="row">
 <div class="col-lg-12">
 <h2>¿INTERESADO EN NAYUTA?</h2>
-<div class="p-heading p-large">Si has llegado hasta aqui es porque Nayuta te está gustando mucho, dale una oportunidad que no te decepcionará con sus increíbles características.</div>
+<div class="p-heading p-large">Si has llegado hasta aquí es porque Nayuta te está gustando mucho. Dale una oportunidad que no te decepcionará con sus increíbles características.</div>
 <center>
     <img src="static/images/nayutakani.png" >
 </center>
