--- a/equipo/index.html
+++ b/equipo/index.html
@@ -91,7 +91,7 @@
       <span class="item-text">ESPAÑOL</span>
     </a>
     <div class="dropdown-items-divide-hr"></div>
-    <a class="dropdown-item" href="en/">
+    <a class="dropdown-item" href="../en/team">
       <img src="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f1fa-1f1f8.svg" alt="English" width="16" height="12">
       <span class="item-text">ENGLISH</span>
     </a>
