--- a/en/team/index.html
+++ b/en/team/index.html
@@ -133,7 +133,7 @@
     <div class="headerTop">
       <div class="badges">
         <div class="badge">
-          <img src="../static/images/brilliance-hypesquad.png"></img>
+          <img src="../../static/images/brilliance-hypesquad.png"></img>
         </div>
 	    
         <div class="badge">
