--- a/equipo/index.html
+++ b/equipo/index.html
@@ -10,7 +10,7 @@
 
 <meta property="og:site_name" content="nayutabot.com" />
 <meta property="og:site" content="" />	
-<meta property="og:title" content="Nayutabot"/>	
+<meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más." />
 <meta property="og:image" content="../static/images/nayutalogosite.png" />
 <meta property="og:url" content="" />	
