--- a/en/team/index.html
+++ b/en/team/index.html
@@ -10,7 +10,7 @@
 
 <meta property="og:site_name" content="nayutabot.com" />
 <meta property="og:site" content="" />	
-<meta property="og:title" content="Nayutabot"/>	
+<meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes, and much more." />
 <meta property="og:image" content="../static/images/nayutalogosite.png" />
 <meta property="og:url" content="" />	
