--- a/en/privacity/index.html
+++ b/en/privacity/index.html
@@ -13,7 +13,7 @@
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes and much more." />
-<meta property="og:image" content="../static/images/nayutalogosite.png" />
+<meta property="og:image" content="../../static/images/nayutalogosite.png" />
 <meta property="og:url" content="" />	
 <meta property="og:type" content="article" />
 
