--- a/equipo/index.html
+++ b/equipo/index.html
@@ -141,7 +141,7 @@
         </div>
 	  
         <div class="badge">
-          <img src="https://i.imgur.com/ltOCx8w.png"></img>
+          <img src="../static/images/early-verified-bot-developer.png"></img>
         </div>
 	
         <div class="badge">
@@ -208,7 +208,7 @@
         </div>
 	    
         <div class="badge">
-          <img src="https://i.imgur.com/ltOCx8w.png"></img>
+          <img src="../static/images/early-verified-bot-developer.png"></img>
         </div>
   
       </div>
