--- a/equipo/index.html
+++ b/equipo/index.html
@@ -137,7 +137,7 @@
         </div>
 	    
 	<div class="badge">
-          <img src="../static/images/active-developer-png"></img>
+          <img src="../static/images/active-developer.png"></img>
         </div>
 	  
         <div class="badge">
