--- a/equipo/index.html
+++ b/equipo/index.html
@@ -149,7 +149,7 @@
         </div>
 	
         <div class="badge">
-          <img src="https://i.imgur.com/b7OjbHL.png"></img>
+          <img src="../static/images/nitro-booster.png"></img>
         </div>
   
       </div>
