--- a/equipo/index.html
+++ b/equipo/index.html
@@ -200,7 +200,7 @@
     <div class="headerTop">
       <div class="badges">
         <div class="badge">
-          <img src="https://i.imgur.com/yOEwnqG.png"></img>
+          <img src="../static/images/bravery-hypesquad.png"></img>
         </div>
 	    
         <div class="badge">
