--- a/equipo/index.html
+++ b/equipo/index.html
@@ -266,7 +266,7 @@
       <div class="headerTop">
         <div class="badges">
           <div class="badge">
-            <img src="https://i.imgur.com/5HZRh5E.png"></img>
+            <img src="../static/images/balance-hypesquad.png"></img>
           </div>
 	      
           <div class="badge">
@@ -328,7 +328,7 @@
       <div class="headerTop">
         <div class="badges">
           <div class="badge">
-            <img src="https://i.imgur.com/5HZRh5E.png"></img>
+            <img src="../static/images/balance-hypesquad.png"></img>
           </div>
     
         </div>
