--- a/en/team/index.html
+++ b/en/team/index.html
@@ -267,7 +267,7 @@
       <div class="headerTop">
         <div class="badges">
           <div class="badge">
-            <img src="https://i.imgur.com/5HZRh5E.png"></img>
+            <img src="../../static/images/balance-hypesquad.png"></img>
           </div>
 	      
 	   <div class="badge">
@@ -329,7 +329,7 @@
       <div class="headerTop">
         <div class="badges">
           <div class="badge">
-            <img src="https://i.imgur.com/5HZRh5E.png"></img>
+            <img src="../../static/images/balance-hypesquad.png"></img>
           </div>
     
         </div>
