--- a/en/team/index.html
+++ b/en/team/index.html
@@ -209,7 +209,7 @@
         </div>
 	    
         <div class="badge">
-          <img src="https://i.imgur.com/aPt4z0J.png"></img>
+          <img src="../../static/images/early-verified-bot-developer.png"></img>
         </div>
   
       </div>
