--- a/en/index.html
+++ b/en/index.html
@@ -6,13 +6,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="theme-color" content="#72c2ed">    
-<meta name="description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más.">    
+<meta name="description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes and much more.">    
 <meta name="author" content="Inovatik">
 
 <meta property="og:site_name" content="Nayutabot.com" />
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
-<meta property="og:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más." />
+<meta property="og:description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes and much more." />
 <meta property="og:image" content="static/images/nayutalogosite.png" />
 <meta property="og:url" content="" />	
 <meta property="og:type" content="article" />
