--- a/en/team/index.html
+++ b/en/team/index.html
@@ -146,7 +146,7 @@
 	  
 	  
         <div class="badge">
-          <img src="../../static/images/nitro-subscriber"></img>
+          <img src="../../static/images/nitro-subscriber.png"></img>
     
         </div>
         <div class="badge">
