--- a/404.html
+++ b/404.html
@@ -48,6 +48,7 @@
 
     <h2><center>Error 404 - ¡Oops! Parece que te has perdido en el cosmos</center></h2>
     <center><img src="../static/images/cry.gif" alt="centered image"/><br></center>
+<a href="https://nayutabot.com/" class="button">Volver a la Página de Inicio</a>
     
     
     </div>
