--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 <link rel="icon" href="static/images/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
+
+<noscript>
+  <p>
+    Activa JavaScript en tu navegador para acceder al sitio web.
+  </p>
+</noscript>
     
 <div class="spinner-wrapper">       
 <div class="spinner">           
