--- a/index.html
+++ b/index.html
@@ -30,12 +30,6 @@
 <link rel="icon" href="static/images/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
-
-<noscript>
-  <p>
-    Activa JavaScript en tu navegador para acceder al sitio web.
-  </p>
-</noscript>
     
 <div class="spinner-wrapper">       
 <div class="spinner">           
@@ -296,7 +290,8 @@
 <script src="static/js/jquery.magnific-popup.js"></script> 
 <script src="static/js/morphext.min.js"></script> 
 <script src="static/js/validator.min.js"></script> 
-<script src="static/js/scripts.js"></script> 
+<script src="static/js/scripts.js"></script>
+<p>prueba123.</p>
 </body>
 
 </html>
