--- a/equipo/index.html
+++ b/equipo/index.html
@@ -353,7 +353,7 @@
         
       <div class="headerTag">
         <body>
-      <p style="color:#b6b8bb";>Tester oficial para Nayuta.<br>No se que poner en esta BIO.</p>
+      <p style="color:#b6b8bb";>Tester oficial para Nayuta.<br>Estoy inactivo.</p>
     </body>
       </div>
       </div>
