--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más." />
 <meta property="og:image" content="../static/images/nayutalogosite.png" />
-<meta property="og:url" content="" />	
+<meta property="og:url" content="https://nayutabot.com" />
 <meta property="og:type" content="article" />
+
+<meta name="HandheldFriendly" content="True" />
+<meta name="MobileOptimized" content="320" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<meta name="msapplication-TileColor" content="#ffffff" />
+<meta name="theme-color" content="#ffffff">
 
 <title>Nayuta | Discord Bot</title>
     
