--- a/en/index.html
+++ b/en/index.html
@@ -17,6 +17,13 @@
 <meta property="og:url" content="" />	
 <meta property="og:type" content="article" />
 
+<meta name="HandheldFriendly" content="True" />
+<meta name="MobileOptimized" content="320" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<meta name="msapplication-TileColor" content="#ffffff" />
+<meta name="theme-color" content="#ffffff">
+
 <title>Nayuta | Discord Bot</title>
     
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
