--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="theme-color" content="#ffffff">
 
+<link rel="alternate" hreflang="en" href="https://nayutabot.com/en">
+
 <title>Nayuta | Discord Bot</title>
     
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
