--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
 <meta property="og:url" content="https://nayutabot.com" />
 <meta property="og:type" content="article" />
 
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@username">
+<meta name="twitter:title" content="Nayuta">
+<meta name="twitter:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más.">
+<meta name="twitter:image" content="../static/images/nayutalogosite.png">
+
 <meta name="HandheldFriendly" content="True" />
 <meta name="MobileOptimized" content="320" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="theme-color" content="#ffffff">
-
-<link rel="alternate" hreflang="en" href="https://nayutabot.com/en">
 
 <title>Nayuta | Discord Bot</title>
     
@@ -36,6 +40,7 @@
 <link href="static/css/magnific-popup.css" rel="stylesheet">
 <link href="static/css/styles.css" rel="stylesheet">
 
+<link rel="alternate" hreflang="en" href="https://nayutabot.com/en">
 <link rel="icon" href="static/images/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
