--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
     <div class="col-lg-10 offset-lg-1">
     <div class="text-container">
 
-    <h2><center>Error 404 - ¡Oops! Parece que te has perdido en el cosmos</center></h2>
+    <h2><center>Error 404 - ¡Oops! Parece que te has perdido en el cosmo</center></h2>
     <center><img src="../static/images/cry.gif" alt="centered image"/><br></center>
 <center><a href="https://nayutabot.com/" class="button">Volver a la Página de Inicio</a></center>
     
