--- a/en/team/index.html
+++ b/en/team/index.html
@@ -219,6 +219,15 @@
         <div class="badge">
           <img src="../../static/images/early-verified-bot-developer.png"></img>
         </div>
+
+	<div class="badge">
+          <img src="../../static/images/nitro-subscriber.png"></img>
+        </div>
+	      
+        <div class="badge">
+          <img src="../../static/images/nitro-booster.png"></img>
+        </div>
+	      
   
       </div>
     <div class="headerText">
