--- a/equipo/index.html
+++ b/equipo/index.html
@@ -218,6 +218,14 @@
         <div class="badge">
           <img src="../static/images/early-verified-bot-developer.png"></img>
         </div>
+
+	<div class="badge">
+          <img src="../static/images/nitro-subscriber.png"></img>
+        </div>
+	
+        <div class="badge">
+          <img src="../static/images/nitro-booster.png"></img>
+        </div>
   
       </div>
     <div class="headerText">
