--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="msapplication-TileColor" content="#ffffff" />
 <meta name="theme-color" content="#ffffff">
+<meta name="format-detection" content="telephone=no">
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="dns-prefetch" href="https://fonts.gstatic.com">
 
 <title>Nayuta | Discord Bot</title>
     
