--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+<link rel="preload" href="static/css/styles.css" as="style">
+<link rel="preload" href="static/js/scripts.js" as="script">
 
 <title>Nayuta | Discord Bot</title>
     
