--- a/404.html
+++ b/404.html
@@ -28,6 +28,11 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src * data:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';">
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="dns-prefetch" href="https://fonts.gstatic.com">
+<link rel="preload" href="../static/css/styles.css" as="style">
+<link rel="preload" href="../static/js/scripts.js" as="script">
     
 <title>Nayuta | Discord Bot</title>
     
