--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <h2>¿INTERESADO EN NAYUTA?</h2>
 <div class="p-heading p-large">Si has llegado hasta aquí es porque Nayuta te está gustando mucho. Dale una oportunidad que no te decepcionará con sus increíbles características.</div>
 <center>
-    <img src="static/images/nayutakani.png" >
+    <img src="https://media.discordapp.net/attachments/1224576994956673077/1318468962064928822/nayutakani.png?ex=67626f68&is=67611de8&hm=3901efd9367bcc6f04d7431d1f4e5e0b4d6c2cfdccbfb61c0111f44267bfc141&=&format=webp&quality=lossless" >
 </center>
 </div>
 </div> 
