--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <div class="row">
 <div class="col-lg-6">
 
-<img class="img-fluid" src="static/images/actions.gif" alt="alternative">
+<img class="img-fluid" src="https://media.discordapp.net/attachments/1224576994956673077/1318469430912745482/actions.gif?ex=67626fd8&is=67611e58&hm=ea42adf19501408d80ef5c6036621fbf066fb72e0f1dcba9e3fac308f08dc8e2&=" alt="alternative">
 
 </div>
 <div class="col-lg-6">
