--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 <div class="row">
 <div class="col-md-4">
 <div class="footer-col">
-<h4><img src="static/images/footerimage.png" width="150" height="50" align="left"><br></h4>
+<h4><img src="https://media.discordapp.net/attachments/1224576994956673077/1318474480326283264/footerimage.png?ex=6762748c&is=6761230c&hm=a000145e1210c645c6d6eb0c86c5aadc2e6fb95727ccf346102a136765220707&=&format=webp&quality=lossless" width="150" height="50" align="left"><br></h4>
 <p><br>Nayuta es un bot de entretenimiento diseñado para cuidar de ti y de tu servidor, con el objetivo de llevar la atmósfera cómoda y saludable directamente a tu chat.</p>
 <div class=""><a class="turquoise" href="privacidad/">Política de privacidad</a></div>
 </div>
