--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <link href="static/css/styles.css" rel="stylesheet">
 
 <link rel="alternate" hreflang="en" href="https://nayutabot.com/en">
-<link rel="icon" href="static/images/favicon.png">
+<link rel="icon" href="https://media.discordapp.net/attachments/1224576994956673077/1318477092597399582/favicon.png?ex=676276fa&is=6761257a&hm=1bd2a2a634d1f582429f5315a8c64f25190d7dd6d9b73b5b59eab3396f3aacbc&=&format=webp&quality=lossless">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
