--- a/404.html
+++ b/404.html
@@ -65,7 +65,7 @@
     <div class="text-container">
 
     <h2><center>Error 404 - ¡Oops! Parece que te has perdido en el cosmo</center></h2>
-    <center><img src="../static/images/cry.gif" alt="centered image"/><br></center>
+    <center><img src="https://media.discordapp.net/attachments/1224576994956673077/1318644131072966656/cry.gif?ex=6763128c&is=6761c10c&hm=4d139c99ad8f2b10faf17f785b87f57bc73265736869a549d23a8e6081551b1c&=" alt="centered image"/><br></center>
 <center><a href="https://nayutabot.com/" class="button">Volver a la Página de Inicio</a></center>
     
     
