--- a/en/index.html
+++ b/en/index.html
@@ -186,7 +186,7 @@
 <div class="col-lg-6">
 <div class="text-container">
 
-<h3>MESSAGES CUSTOM</h3>
+<h3>CUSTOM MESSAGES</h3>
 <p>Nayuta has the ability to adapt messages in embed format.<br><br>Messages can be completely personalized, incorporating various variables to create unique and attractive greetings and thanks.<br><br>With Nayuta present in your server you can have all this with a simple command.</p>
 </div>
 </div>
