--- a/en/index.html
+++ b/en/index.html
@@ -58,7 +58,7 @@
 </div>
     
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-<a class="navbar-brand logo-image" href="../en/"><img src="../static/images/logo.png" alt="The database is offline or a loading error has occurred"></a> 
+<a class="navbar-brand logo-image" href="../en/"><img src="https://media.discordapp.net/attachments/1224576994956673077/1318474955381276672/logo.png?ex=676274fd&is=6761237d&hm=f1c5f3f1244dde36f9cb5769cc73018e1d2d99e1622dc86155a9ffcf55e8a4a1&=&format=webp&quality=lossless" alt="The database is offline or a loading error has occurred"></a> 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-awesome fas fa-bars"></span>
 <span class="navbar-toggler-awesome fas fa-times"></span>
