--- a/en/index.html
+++ b/en/index.html
@@ -167,7 +167,7 @@
 </div>
 <div class="col-lg-6">
 
-<img class="img-fluid" src="../static/images/wallpapers.png" alt="alternative">
+<img class="img-fluid" src="https://media.discordapp.net/attachments/1224576994956673077/1318469900456427531/wallpapers.png?ex=67627048&is=67611ec8&hm=ec995ccce1e149ebcbca82c928a9ed3b05a9a1b792890a86a58914a7b742918b&=&format=webp&quality=lossless" alt="alternative">
 
 </div>
 </div>
