--- a/en/index.html
+++ b/en/index.html
@@ -180,7 +180,7 @@
 <div class="row">
 <div class="col-lg-6">
 
-<img class="img-fluid" src="../static/images/emision.png" alt="alternative">
+<img class="img-fluid" src="https://media.discordapp.net/attachments/1224576994956673077/1318471593156153415/emision.png?ex=676271db&is=6761205b&hm=74e3f8a6d21a7416dd5420469c5dfd224aedf7c3cbe86d7ddd040d0f8f027488&=&format=webp&quality=lossless" alt="alternative">
 
 </div>
 <div class="col-lg-6">
