--- a/en/index.html
+++ b/en/index.html
@@ -208,7 +208,7 @@
     </div>
     <div class="col-lg-6">
     
-    <img class="img-fluid" src="../static/images/moderation.png" alt="alternative">
+    <img class="img-fluid" src="https://media.discordapp.net/attachments/1224576994956673077/1318473383297548408/moderation.png?ex=67627386&is=67612206&hm=1cbfdb38f802428d4881a1ab52eeba011edd0c14189f4c2b087254fa6d9f05c7&=&format=webp&quality=lossless" alt="alternative">
     
     </div>
     </div>
