--- a/en/index.html
+++ b/en/index.html
@@ -224,7 +224,7 @@
 <h2>INTERESTED IN NAYUTA?</h2>
 <div class="p-heading p-large">If you have come this far it is because you like Nayuta a lot, give it a chance that will not disappoint you with its incredible features.</div>
 <center>
-    <img src="../static/images/nayutakani.png" >
+    <img src="https://media.discordapp.net/attachments/1224576994956673077/1318468962064928822/nayutakani.png?ex=67626f68&is=67611de8&hm=3901efd9367bcc6f04d7431d1f4e5e0b4d6c2cfdccbfb61c0111f44267bfc141&=&format=webp&quality=lossless" >
 </center>
 </div>
 </div> 
