--- a/equipo/index.html
+++ b/equipo/index.html
@@ -151,7 +151,7 @@
     <div class="headerTop">
       <div class="badges">
         <div class="badge">
-          <img src="../static/images/brilliance-hypesquad.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318652747704434830/brilliance-hypesquad.png?ex=67631a92&is=6761c912&hm=47112914dd5eea62cbf6781f2c79308f7ff9560debd7b4767cf7fd92c7c62eed&=&format=webp&quality=lossless"></img>
         </div>
 	    
 	<div class="badge">
