--- a/equipo/index.html
+++ b/equipo/index.html
@@ -155,7 +155,7 @@
         </div>
 	    
 	<div class="badge">
-          <img src="../static/images/active-developer.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653084649525489/active-developer.png?ex=67631ae2&is=6761c962&hm=d3a5668e967f491539c4ff41bbc435a5c12900266feb0640afa700492e0d07db&=&format=webp&quality=lossless"></img>
         </div>
 	  
         <div class="badge">
