--- a/equipo/index.html
+++ b/equipo/index.html
@@ -159,7 +159,7 @@
         </div>
 	  
         <div class="badge">
-          <img src="../static/images/early-verified-bot-developer.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653254246072342/early-verified-bot-developer.png?ex=67631b0b&is=6761c98b&hm=239f1a8468960b95276515df522fc9b9c34cc9d4ccb84530131a4151cb9d3b4d&=&format=webp&quality=lossless"></img>
         </div>
 	
         <div class="badge">
