--- a/equipo/index.html
+++ b/equipo/index.html
@@ -163,7 +163,7 @@
         </div>
 	
         <div class="badge">
-          <img src="../static/images/nitro-subscriber.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653367995863090/nitro-subscriber.png?ex=67631b26&is=6761c9a6&hm=b7c001c00b04fc73d9518b0045cb2b9270d2d2e27ebefddf254490cc0abc5115&=&format=webp&quality=lossless"></img>
         </div>
 	
         <div class="badge">
