--- a/equipo/index.html
+++ b/equipo/index.html
@@ -167,7 +167,7 @@
         </div>
 	
         <div class="badge">
-          <img src="../static/images/boost-24-months.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653532425158666/boost-24-months_1.png?ex=67631b4d&is=6761c9cd&hm=84c107a0c3039d64267476a114981acdd8f110e28a2dc72a8d025b24e1817b91&=&format=webp&quality=lossless"></img>
         </div>
   
       </div>
