--- a/equipo/index.html
+++ b/equipo/index.html
@@ -218,7 +218,7 @@
     <div class="headerTop">
       <div class="badges">
         <div class="badge">
-          <img src="../static/images/bravery-hypesquad.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653689006653460/bravery-hypesquad.png?ex=67631b72&is=6761c9f2&hm=bf08e30436f2751aee8c2f396ade239498b3b3b99e580762738b1dcecb160143&=&format=webp&quality=lossless"></img>
         </div>
 	    
         <div class="badge">
