--- a/en/team/index.html
+++ b/en/team/index.html
@@ -12,7 +12,7 @@
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes, and much more." />
-<meta property="og:image" content="../../static/images/nayutalogosite.png" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/1224576994956673077/1318476492291964958/nayutalogosite.png?ex=6762766b&is=676124eb&hm=7c99f47e2bcbd7f0082ce1d8eb6852fcc555598ca9e83ec4a4228ff011f0c874&=&format=webp&quality=lossless" />
 <meta property="og:url" content="" />	
 <meta property="og:type" content="article" />
 
