--- a/en/team/index.html
+++ b/en/team/index.html
@@ -151,24 +151,24 @@
     <div class="headerTop">
       <div class="badges">
         <div class="badge">
-          <img src="../../static/images/brilliance-hypesquad.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318652747704434830/brilliance-hypesquad.png?ex=67631a92&is=6761c912&hm=47112914dd5eea62cbf6781f2c79308f7ff9560debd7b4767cf7fd92c7c62eed&=&format=webp&quality=lossless"></img>
         </div>
 	    
         <div class="badge">
-          <img src="../../static/images/active-developer.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653084649525489/active-developer.png?ex=67631ae2&is=6761c962&hm=d3a5668e967f491539c4ff41bbc435a5c12900266feb0640afa700492e0d07db&=&format=webp&quality=lossless"></img>
         </div>
 	  
 	 <div class="badge">
-          <img src="../../static/images/early-verified-bot-developer.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653254246072342/early-verified-bot-developer.png?ex=67631b0b&is=6761c98b&hm=239f1a8468960b95276515df522fc9b9c34cc9d4ccb84530131a4151cb9d3b4d&=&format=webp&quality=lossless"></img>
         </div>
 	  
 	  
         <div class="badge">
-          <img src="../../static/images/nitro-subscriber.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653367995863090/nitro-subscriber.png?ex=67631b26&is=6761c9a6&hm=b7c001c00b04fc73d9518b0045cb2b9270d2d2e27ebefddf254490cc0abc5115&=&format=webp&quality=lossless"></img>
     
         </div>
         <div class="badge">
-          <img src="../../static/images/boost-24-months.png"></img>
+          <img src="https://media.discordapp.net/attachments/1224576994956673077/1318653532425158666/boost-24-months_1.png?ex=67631b4d&is=6761c9cd&hm=84c107a0c3039d64267476a114981acdd8f110e28a2dc72a8d025b24e1817b91&=&format=webp&quality=lossless"></img>
         </div>
   
       </div>
