--- a/en/team/index.html
+++ b/en/team/index.html
@@ -347,7 +347,7 @@
       <div class="headerTop">
         <div class="badges">
           <div class="badge">
-            <img src="../../static/images/balance-hypesquad.png"></img>
+            <img src="https://media.discordapp.net/attachments/1224576994956673077/1318654219661607034/balance-hypesquad.png?ex=67631bf1&is=6761ca71&hm=03805854e5a6623ac424e71bf20ee8fac2e01d163258432df12843fda1f679d9&=&format=webp&quality=lossless"></img>
           </div>
     
         </div>
