--- a/en/privacity/index.html
+++ b/en/privacity/index.html
@@ -13,7 +13,7 @@
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes and much more." />
-<meta property="og:image" content="../../static/images/nayutalogosite.png" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/1224576994956673077/1318476492291964958/nayutalogosite.png?ex=6762766b&is=676124eb&hm=7c99f47e2bcbd7f0082ce1d8eb6852fcc555598ca9e83ec4a4228ff011f0c874&=&format=webp&quality=lossless" />
 <meta property="og:url" content="" />	
 <meta property="og:type" content="article" />
 
@@ -45,7 +45,7 @@
 <link href="../../static/css/magnific-popup.css" rel="stylesheet">
 <link href="../../static/css/styles.css" rel="stylesheet">
 
-<link rel="icon" href="../../static/images/favicon.png">
+<link rel="icon" href="https://media.discordapp.net/attachments/1224576994956673077/1318477092597399582/favicon.png?ex=676276fa&is=6761257a&hm=1bd2a2a634d1f582429f5315a8c64f25190d7dd6d9b73b5b59eab3396f3aacbc&=&format=webp&quality=lossless">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -58,7 +58,7 @@
 </div>
     
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-<a class="navbar-brand logo-image" href="../../en/"><img src="../../static/images/logo.png" alt="The database is offline or a loading error has occurred"></a> 
+<a class="navbar-brand logo-image" href="../../en/"><img src="https://media.discordapp.net/attachments/1224576994956673077/1318474955381276672/logo.png?ex=676274fd&is=6761237d&hm=f1c5f3f1244dde36f9cb5769cc73018e1d2d99e1622dc86155a9ffcf55e8a4a1&=&format=webp&quality=lossless" alt="The database is offline or a loading error has occurred"></a> 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-awesome fas fa-bars"></span>
 <span class="navbar-toggler-awesome fas fa-times"></span>
