--- a/privacidad/index.html
+++ b/privacidad/index.html
@@ -41,7 +41,7 @@
 <link href="../static/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 
-<link rel="icon" href="https://media.discordapp.net/attachments/1224576994956673077/1318477092597399582/favicon.png?ex=676276fa&is=6761257a&hm=1bd2a2a634d1f582429f5315a8c64f25190d7dd6d9b73b5b59eab3396f3aacbc&=&format=webp&quality=lossless">
+<link rel="icon" href="../static/images/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -55,7 +55,7 @@
 </div>
     
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-<a class="navbar-brand logo-image" href="../"><img src="https://media.discordapp.net/attachments/1224576994956673077/1318474955381276672/logo.png?ex=676274fd&is=6761237d&hm=f1c5f3f1244dde36f9cb5769cc73018e1d2d99e1622dc86155a9ffcf55e8a4a1&=&format=webp&quality=lossless" alt="La base de datos está fuera de línea o se ha producido un error de carga."></a> 
+<a class="navbar-brand logo-image" href="../"><img src="../static/images/logo.png" alt="La base de datos está fuera de línea o se ha producido un error de carga."></a> 
 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-awesome fas fa-bars"></span>
