--- a/equipo/index.html
+++ b/equipo/index.html
@@ -139,15 +139,12 @@
 <div class="cell">
   <div class="profile">
     <div class="banner">
-      <div class="change-banner">
-      </div>
     </div>
     <div class="avatar__wrapper">
       <div class="avatar">
-        <div class="change-avatar">
-        </div>
-      </div>
+        <img class="cat-ears" src="https://i.imgur.com/byUhB6I.png" alt="Orejas de gato">
     </div>
+  </div>
     <div class="headerTop">
       <div class="badges">
         <div class="badge">
@@ -208,8 +205,6 @@
 <div class="cell">
   <div class="profile">
     <div class="banner2">
-      <div class="change-banner">
-      </div>
     </div>
     <div class="avatar__wrapper">
       <div class="avatar2">
@@ -274,8 +269,6 @@
   <div class="cell">
     <div class="profile">
       <div class="banner3">
-        <div class="change-banner">
-        </div>
       </div>
       <div class="avatar__wrapper">
         <div class="avatar3">
@@ -334,13 +327,9 @@
   <div class="cell">
     <div class="profile">
       <div class="banner4">
-        <div class="change-banner">
-        </div>
       </div>
       <div class="avatar__wrapper">
         <div class="avatar4">
-          <div class="change-avatar">
-          </div>
         </div>
       </div>
       <div class="headerTop">
