--- a/en/team/index.html
+++ b/en/team/index.html
@@ -144,9 +144,8 @@
     </div>
     <div class="avatar__wrapper">
       <div class="avatar">
-        <div class="change-avatar">
-        </div>
-      </div>
+        <img class="cat-ears" src="https://i.imgur.com/byUhB6I.png" alt="Orejas de gato">
+    </div>
     </div>
     <div class="headerTop">
       <div class="badges">
